20-07-2026/terraform/main.tf
provider "aws" {

 region = "ap-south-1"

}


resource "aws_security_group" "pathnex_sg" {


name_prefix = "pathnex-security-"


description = "Allow secure web access"



ingress {


from_port = 22

to_port = 22

protocol = "tcp"

cidr_blocks = ["0.0.0.0/0"]

}



ingress {


from_port = 80

to_port = 80

protocol = "tcp"

cidr_blocks = ["0.0.0.0/0"]

}



egress {


from_port = 0

to_port = 0

protocol = "-1"

cidr_blocks = ["0.0.0.0/0"]

}

}
